--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>計算ツール</title>
+    <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0" />
     <link rel="stylesheet" href="css.css">
   </head>
   <body>
@@ -32,7 +33,7 @@
     </div>
     
     <form onsubmit="return false"
-    oninput="o.value = a.valueAsNumber + b.valueAsNumber"><p>2つの和</p>
+    oninput="o.value = a.valueAsNumber + b.valueAsNumber"><p>2つの和</p>z
   <input name="a" id="a" type="number"> + <input name="b" id="b" type="number"> = 
 <output name="0" id="o" for="a b">計算結果がここに表示されます</output></form> 
 
