--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     
     <form onsubmit="return false"
-    oninput="o.value = a.valueAsNumber + b.valueAsNumber"><p>2つの和</p>z
+    oninput="o.value = a.valueAsNumber + b.valueAsNumber"><p>2つの和</p>
   <input name="a" id="a" type="number"> + <input name="b" id="b" type="number"> = 
 <output name="0" id="o" for="a b">計算結果がここに表示されます</output></form> 
 
