--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>入力式計算ツール</title>
     <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0" />
     <link rel="stylesheet" href="css.css">
-    
   </head>
   <body>
     <div class="header">
@@ -17,7 +16,7 @@
         </ul>
       </div>
     </div>
-   
+   <h1>難しい数式の並んだほかの計算ツールとは違い、誰でも簡単に使える、シンプルな計算ツール。</h1>
     <div class="main">
       <div class="copy-container">
         <h1>The calculator<span><p class="circle"></p></span></h1>
