--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>入力式計算ツール</title>
+    <title>TypeKeisan</title>
     <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0" />
     <link rel="stylesheet" href="css.css">
   </head>
   <body>
     <div class="header">
-      <h1><div class="header-logo">入力式計算ツール</div></h1>
+      <h1><div class="header-logo">TypeKeisan</div></h1>
       <div class="header-list">
         
         
