--- a/jaedhi.html
+++ b/jaedhi.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>TypeKeisan</title>
+  <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0">
   <style>
     .green {
         background-color: rgba(158, 199, 168, 0.933);
