--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ output {
 </head>
 <body>
     <div class="green"><div class="TypeKeisan">TypeKeisan</div> </div>
-    <div class="classic">classic版はこちら<a>まだ公開できてません</a></div>
+    <div class="classic">classic版はこちら<a>https://sfcexe.github.io/classic/</a></div>
     <h1 style="font-size: 70px;">The calculator<span><p class="circle"></p></span></h1>
   <div class="calc-container">
     <form onsubmit="return false" oninput="o1.value = a1.valueAsNumber + b1.valueAsNumber">
