--- a/index.html
+++ b/index.html
@@ -279,6 +279,9 @@ output {
   </style>
 </head>
 <body>
+
+  <iframe width="80%" height="600px" src="https://www.youtube.com/embed/A49zusfc3bM" title="黒い背景でマウスを動かしている素材" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
     <div class="green"><div class="TypeKeisan">TypeKeisan</div> </div>
   <div class="classic">classic版は<a href="https://sfcexe.github.io/classic/">こちら</a></div>
     <h1 style="font-size: 70px;">The calculator<span><p class="circle"></p></span></h1>
