--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ button:hover {
     <div class="footer">
       <div class="footer-logo">TypeKeisan</div>
       <div class="footer-list">
-        <li><a href="https://sfcexe.github.io/classic" style="text-decoration:none;">Old TypeKeisan</a></li>
+        <ul><li><a href="https://sfcexe.github.io/classic" style="text-decoration:none;">Old TypeKeisan</a></li></ul>
       </div>
     </div>
     <!-- JavaScriptのコード -->
