--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ button:hover {
     </div>
     <h2 style="text-align: center; text-shadow: 0px 5px 5px rgba(219, 184, 243, 0.933);">Choose the tool you want to use</h2>
     <div class="footer">
-      <div class="footer-logo">TypeKeisan</div>
+      <div class="footer-logo">simple useful tools</div>
       <div class="footer-list">
         <ul><li><a href="https://sfcexe.github.io/classic" style="text-decoration:none;">Old TypeKeisan</a></li></ul>
       </div>
