--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <title>simple useful tools</title>
+  <title>simple useful web tools</title>
   <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -330,7 +330,7 @@ button:hover {
 <body>
     <div class="green">
       <div class="header">
-        <div class="TypeKeisan">simple useful tools</div>
+        <div class="TypeKeisan">simple useful web tools</div>
       </div>      
     </div>
     <div class="tab-menu">
@@ -405,11 +405,11 @@ button:hover {
       </div>
     </div>
 
-    <div id="HOME" class="tab-content"><h1 class="animated-text" id="welcome">Welcome to simple useful tools!</h1>
+    <div id="HOME" class="tab-content"><h1 class="animated-text" id="welcome">Welcome to simple useful web tools!</h1>
     </div>
     <h2 style="text-align: center; text-shadow: 0px 5px 5px rgba(219, 184, 243, 0.933);">Choose the tool you want to use</h2>
     <div class="footer">
-      <div class="footer-logo">simple useful tools</div>
+      <div class="footer-logo">simple useful web tools</div>
       <div class="footer-list">
         <ul><li><a href="https://sfcexe.github.io/classic" style="text-decoration:none;">Old tool</a></li></ul>
       </div>
