--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="google-site-verification" content="1YtuVHXqGWY9Qal3J8Ejy3lIAxX6_rRoTyOwqLSsEi0">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is a simple and useful web tool. 「simple useful web tools」" />
   <script src="script.js"></script>
   <style>
     /* グローバルスタイル */
