--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ button:hover {
 }
 .footer {
     margin-top: 600px;
-    background-color:rgba(158, 199, 168, 0.933);
+    background-color:black;
     color: #fff;
     height: 120px;
     padding: 40px;
@@ -412,7 +412,7 @@ button:hover {
     <div class="footer">
       <div class="footer-logo">simple useful web tools</div>
       <div class="footer-list">
-        <ul><li><a href="https://sfcexe.github.io/classic" style="text-decoration:none;">Old tool</a></li></ul>
+        <ul><li><a href="https://sfcexe.github.io/classic" style="text-decoration:none; color:white;">Old tool</a></li></ul>
       </div>
     </div>
     <!-- JavaScriptのコード -->
