--- a/index.html
+++ b/index.html
@@ -317,7 +317,6 @@ button:hover {
     }
 
     /* メモ入力欄のスタイル */
-    /* メモ入力欄のスタイル */
 #memo-text {
     width: 100%;
     height: 200px;
@@ -428,7 +427,7 @@ button:hover {
       <div id="container">
         <div id="pixabay-container">
           <h2>Image search</h2>
-          <input type="text" id="searchInput" placeholder="Let's search">
+          <input type="text" id="searchInputs" placeholder="Let's search">
           <button onclick="searchImages()">Search</button>
           <div id="imageResults"></div>
         </div>
